...
        modifier = modifier
            .onSizeChanged { availableWidth = it.width }
            .then(
                if (canExpand) {
                    Modifier
                        .clickable(
                            onClickLabel = if (expanded) "Less" else "More"
                        ) {
                            expanded = !expanded
                        }
                        .semantics {
                            stateDescription = if (expanded) "Expanded" else "Collapsed"
                        }
...
